<resources>
    <string name="app_name">CY</string>
    <string name="atmessenger">ATMessenger</string>
    <string name="message_content">Message</string>
    <string name="timestamp">Timestamp</string>
    <string name="person_displayed_name">Displayed name</string>
    <string name="start_new_conversation">Start a new conversation</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send">Send</string>
    <string name="welcome_message">Welcome to CY</string>
    <string name="create_a_profile">Create a profile</string>
    <string name="chat_name_placeholder">Chat name placeholder</string>
    <string name="last_message_placeholder">Last message placeholder</string>
    <string name="profile_image">Profile_image</string>
    <string name="search_bar">Search bar</string>
    <string name="back">Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="call_name_placeholder">Call name placeholder</string>
    <string name="call_status">Call status</string>
    <string name="todo">TODO</string>
    <string name="your_message">Your message...</string>
    <string name="_00_00">00:00</string>
    <string name="timestamp_placeholder">TIMESTAMP_PLACEHOLDER</string>
    <string name="file_extension_placeholder">file.extension.placeholder</string>
    <string name="settings">Settings</string>
    <string name="scan_a_qr_code">Scan a QR code</string>
    <string name="show_your_qr_code">Show your QR code</string>
    <string name="scan_qr">Scan QR</string>
    <string name="practice_makes_perfect">Practice makes perfect</string>
    <string name="restore_a_backup">Restore a backup</string>
    <string name="i_m_new_on_cy">I\'m new on CY</string>
    <string name="contacts">Contacts</string>
    <string name="new_group">New group</string>
    <string name="choose_from_your_contacts">Choose from your contacts</string>
    <string name="contact_name_placeholder">Contact name placeholder</string>
    <string name="status_placeholder">Status Placeholder</string>
    <string name="qr_needed_on_peer">Scan your QR Code on the peer device</string>
    <string name="calling">Calling...</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
</resources>