<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/callImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/profile_picture_placeholder"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/called_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/call_name_placeholder"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/callImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <ImageView
        android:id="@+id/statusImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/call_status"
        android:src="@drawable/call_made"
        android:minWidth="12dp"
        android:minHeight="12dp"
        app:layout_constraintStart_toEndOf="@+id/callImageView"
        app:layout_constraintTop_toBottomOf="@+id/called_name">

    </ImageView>

    <TextView
        android:id="@+id/call_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/timestamp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/statusImageView"
        app:layout_constraintTop_toBottomOf="@+id/called_name" />

    <ImageView
        android:id="@+id/recallImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/call_status"
        android:minWidth="12dp"
        android:minHeight="12dp"
        android:src="@drawable/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/called_name">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>