<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/chat_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/profile_picture_placeholder"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/chat_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/chat_name_placeholder"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/chat_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/time_and_unread_container"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/chat_preview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/last_message_placeholder"
        android:textColor="@color/gray_to_white"
        android:textSize="14sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="@id/chat_name"
        app:layout_constraintTop_toBottomOf="@id/chat_name"
        app:layout_constraintEnd_toStartOf="@id/time_and_unread_container"/>

    <LinearLayout
        android:id="@+id/time_and_unread_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/chat_name"
        app:layout_constraintBottom_toBottomOf="@id/chat_preview">

        <TextView
            android:id="@+id/chat_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestamp"
            android:textColor="@color/notification_green"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/unread_count"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:background="@drawable/unread_count_bg"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/chat_time"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>