<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/register">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/option_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/close_button"
        android:contentDescription="TODO"
        app:tint="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/cy_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="TODO"
        android:maxHeight="200dp"
        android:scaleType="centerInside"
        android:src="@drawable/register_logo"
        app:layout_constraintBottom_toTopOf="@id/welcomeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exitButton" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice_makes_perfect"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cy_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        app:boxStrokeColor="@color/custom_input_border"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/custom_blue"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        app:boxStrokeColor="@color/custom_input_border"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/custom_blue"
        app:layout_constraintTop_toBottomOf="@id/firstNameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createProfileButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_a_profile"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/custom_gray"
        android:backgroundTint="@color/olvid_white"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintTop_toBottomOf="@id/lastNameLayout"
        app:layout_constraintStart_toStartOf="@id/lastNameLayout"
        app:layout_constraintEnd_toEndOf="@id/lastNameLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>
