<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WelcomeActivity">

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/close_button"
        android:contentDescription="TODO"
        app:tint="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/cy_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="TODO"
        android:maxHeight="200dp"
        android:scaleType="centerInside"
        android:src="@drawable/register_logo"
        app:layout_constraintBottom_toTopOf="@id/welcomeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exitButton" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cy_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/already_registered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/button_border_welcome_page"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restore_a_backup"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/custom_gray"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/button_border_welcome_page"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/already_registered"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/i_m_new_on_cy"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/custom_gray"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>