<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white"
    android:fitsSystemWindows="true"
    tools:context=".Activities.ConversationsActivity"
    android:id="@+id/conversations">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/bar_view_above"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" />

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search_icon"
        android:contentDescription="@string/search_bar"
        android:layout_marginEnd="8dp"
        android:tint="@color/black"
        app:layout_constraintEnd_toStartOf="@id/settings_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bar_view_above" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:iconifiedByDefault="false"
        app:queryHint="Search..."
        app:layout_constraintStart_toEndOf="@+id/app_name"
        app:layout_constraintEnd_toStartOf="@id/search_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bar_view_above"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/settings_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bar_view_above"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:tint="@android:color/black"
        android:contentDescription="@string/todo">

    </ImageButton>

    <View
        android:id="@+id/bar_view_above"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/custom_gray"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/bar_view_above"
        app:layout_constraintBottom_toTopOf="@id/bar_view_below"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/bar_view_below"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/custom_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintWidth_percent="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/custom_white"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus_icon"
        app:tint="@android:color/white"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/custom_blue"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>