<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activities.ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chat_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <View
        android:id="@+id/toolbar_border"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/custom_gray"
        app:layout_constraintTop_toBottomOf="@id/chat_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/contact_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/profile_picture_placeholder"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_picture_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/chat_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/chat_toolbar"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start|center_vertical"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toEndOf="@id/contact_image"
        app:layout_constraintTop_toTopOf="@id/contact_image"
        app:layout_constraintBottom_toBottomOf="@id/contact_image"
        app:layout_constraintEnd_toStartOf="@id/call_voice" />


    <ImageView
        android:id="@+id/call_voice"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/phone"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@id/call_video"
        app:layout_constraintTop_toTopOf="@id/chat_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/chat_toolbar" />

    <ImageView
        android:id="@+id/call_video"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/videocam"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/chat_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/chat_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_border"
        app:layout_constraintBottom_toTopOf="@id/message_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/message_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/bg_message_input"
        android:padding="8dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:id="@+id/emoji_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/emoji_face"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="?attr/selectableItemBackgroundBorderless" />

        <EditText
        android:id="@+id/message_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/your_message"
        android:maxLines="6"
        android:minLines="1"
        android:background="@android:color/transparent"
        android:inputType="textMultiLine|textCapSentences"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:gravity="top|start"
        app:layout_constraintStart_toEndOf="@id/recording_timer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/attach_button"/>

        <TextView
            android:id="@+id/recording_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/emoji_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <ImageView
        android:id="@+id/attach_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/attachment_icon"
        app:layout_constraintEnd_toStartOf="@id/send_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="?attr/selectableItemBackgroundBorderless" />

        <ImageView
            android:id="@+id/send_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_send_button"
            android:padding="12dp"
            android:src="@drawable/mic_icon"
            android:contentDescription="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>